Injecting calendar into timeline

--- a/src/scss/timeline.scss
+++ b/src/scss/timeline.scss
@@ -231,6 +231,10 @@ $timeline-height: 170px;
         }
       }
 
+      .calendar {
+        
+      }
+
       .time-controls-inline path {
         cursor: pointer;
         fill: $offwhite;
