return default styles for category toggles

--- a/src/scss/toolbar.scss
+++ b/src/scss/toolbar.scss
@@ -401,6 +401,7 @@
         display: inline-block;
         width: 12px;
         height: 12px;
+        border: 1px solid $offwhite;
         box-sizing: border-box;
         background: none;
         float: left;
@@ -416,6 +417,21 @@
       font-size: $normal;
       font-family: Helvetica, 'Georgia', 'serif';
       overflow: hidden;
+    }
+
+    &:hover {
+      span {
+        color: $offwhite;
+      }
+    }
+
+    &.active {
+      span {
+        color: $offwhite;
+      }
+      .checkbox {
+        background: $offwhite;
+      }
     }
   }
 
