add a fallback font

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'GT-Zirkon';
-  src: url(../assets/fonts/GT-Zirkon-Regular.woff);
+  src: url(../assets/fonts/timemapfont.woff); // a Lato woff by default
 }
 
 $event_default: red;
