--- a/src/scss/infopopup.scss
+++ b/src/scss/infopopup.scss
@@ -52,6 +52,14 @@
     }
   }
 
+  &.mobile {
+    border: none;
+    padding: 5vmin;
+    .side-menu-burg {
+      display: none;
+    }
+  }
+
 
   .legend {
     display: flex;
