--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,15 +1,22 @@
+@font-face {
+  font-family: 'GT-Zirkon';
+  src: url(../assets/fonts/timemapfont.woff); // a Lato woff by default
+}
+
 $event_default: red;
 
 $offwhite: #efefef;
+$offwhite-transparent: rgba(239,239,239, 0.9);
 $lightwhite: #dfdfdf;
 $midwhite: #a0a0a0;
 $darkwhite: darken($midwhite, 15%);
-$yellow: #ffd800;
+$yellow: #eb443e; // #ffd800;
 $red: rgb(233, 0, 19);
 $green: rgb(61, 241, 79);
 $midgrey: rgb(44, 44, 44);
 $darkgrey: #232323;
 $black: #000000;
+$black-transparent: rgba(0,0,0,0.7);
 
 // Category colors
 $default:   red;
@@ -22,6 +29,7 @@ $other:     yellow;
 .alpha { background: $alpha; }
 .beta { background: $beta; }
 
+$mainfont: 'GT-Zirkon', 'Lato', Helvetica, sans-serif;
 
 // Font sizes
 $xsmall: 10px;//0.7em;
@@ -34,7 +42,7 @@ $xxxlarge: 32px;
 
 // z-index levels
 $final-level: 10000;
-$loading-overlay: 1000;
+$loading-overlay: 500;
 $overheader: 100;
 $header: 10;
 $map-overlay: 2;
@@ -52,7 +60,7 @@ $card-width: 386px;
 $card-right: 9px;
 $narrative-info-height: 205px;
 $narrative-info-desc-height: 153px;
-$timeline-height: 170px;
+$timeline-height: 250px;
 $toolbar-width: 110px;
 
 $panel-width: 1000px;
@@ -62,3 +70,9 @@ $vimeo-height: $panel-height / 2;
 $banner-height: 100px;
 $padding: 20px;
 $header-inset: 10px;
+
+// CSS variables (for React access)
+:root {
+  --toolbar-width: 110px;
+  --error-red: #eb443e;
+}
