--- a/src/scss/infopopup.scss
+++ b/src/scss/infopopup.scss
@@ -5,14 +5,13 @@
   box-shadow: 10px -10px 38px rgba(0, 0, 0, 0.3), 10px 15px 12px rgba(0, 0, 0, 0.22);
   color: $darkgrey;
   position: absolute;
-  background: $offwhite;
+  background: $offwhite-transparent;
   bottom: $timeline-height;
   left: $toolbar-width;
   border: 3px solid $offwhite;
   border-radius: 1px;
   padding: 20px;
   box-sizing: border-box;
-  font-family: 'Lato', 'Helvetica', sans-serif;
   font-size: $large;
   transition: opacity 0.5s ease 0.1s, z-index 0.1s ease 0s;
   opacity: 1;
@@ -23,6 +22,45 @@
     opacity: 0;
   }
 
+  .side-menu-burg {
+    position: absolute;
+    right: 8px;
+    top: 10px;
+    &.light {
+      &.is-active span:after,
+      &.is-active span:before {
+        background: black;
+      }
+    }
+  }
+
+  &.dark {
+    // background: $black-transparent;
+    background: rgba(0,0,0,0.8);
+    color: white;
+  }
+
+  iframe {
+    flex: 1;
+    width: 100%;
+    min-height: 400px;
+  }
+
+  @media (max-height: 1000px) {
+    iframe {
+      min-height: 230px;
+    }
+  }
+
+  &.mobile {
+    border: none;
+    padding: 5vmin;
+    .side-menu-burg {
+      display: none;
+    }
+  }
+
+
   .legend {
     display: flex;
     flex-direction: column;
@@ -31,17 +69,13 @@
   .legend-header {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     h2 {
       display: flex;
       font-size: 12pt;
       letter-spacing: 2px;
       margin: 0;
     }
-  }
-  .side-menu-burg {
-    position: absolute;
-    right: 8px;
-    top: 10px;
   }
 
   .legend-container {
