--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -46,7 +46,6 @@
     padding: 5px;
     font-weight: 500;
     font-size: 11px;
-    font-family: 'Lato', Helvetica, sans-serif;
     border: rgba($black,0.6);
     letter-spacing: 0.05em;
 
@@ -144,10 +143,15 @@
   pointer-events: auto;
 }
 
+
 .eventLocationMarker {
   fill: none;
   stroke: $yellow;
   stroke-width: 2;
+}
+
+.leaflet-tile {
+  filter: brightness(110%) invert(100%) grayscale(800%) contrast(80%);
 }
 
 /*
@@ -170,6 +174,10 @@
   cursor: pointer;
 }
 
+.cluster-event {
+  cursor: pointer;
+}
+
 .location-event-marker {
   pointer-events: all !important;
   fill: $event_default;
@@ -177,6 +185,14 @@
 
   &.blue {
     fill: blue;
+  }
+}
+
+.cluster-event-marker {
+  pointer-events: all !important;
+
+  &.red {
+    fill: red;
   }
 }
 
