Working scrolling for spotlight buttons; text alignment and styles starting to look better

--- a/src/scss/spotlighttoolbar.scss
+++ b/src/scss/spotlighttoolbar.scss
@@ -4,7 +4,7 @@
   left: 110px;
   right: 0px;
   height: 150px;
-  background: rgba(0, 0, 0, 0.8);
+  // background: rgba(0, 0, 0, 0.8);
   color: white;
   z-index: $timeline;
   top: 570px;
