Change logic to display spotlight buttons => using clip to show in view buttons instead of calculating in view; added css for transition animations when scrolling

--- a/src/scss/spotlighttoolbar.scss
+++ b/src/scss/spotlighttoolbar.scss
@@ -19,6 +19,10 @@
 
     .spotlight-group {
       .spotlight-button {
+        text,
+        rect {
+          transition: 1s ease;
+        }
         &:hover {
           cursor: pointer;
           rect {
