Ability to toggle on / off spotlight buttons and set active spotlight in store

--- a/src/scss/spotlighttoolbar.scss
+++ b/src/scss/spotlighttoolbar.scss
@@ -23,6 +23,11 @@
         rect {
           transition: 1s ease;
         }
+        &.active {
+          rect {
+            fill: $offwhite;
+          }
+        }
         &:hover {
           cursor: pointer;
           rect {
