Spotlight events now rotating with gradient and no longer glowing

--- a/src/scss/spotlighttoolbar.scss
+++ b/src/scss/spotlighttoolbar.scss
@@ -84,17 +84,17 @@
 
 .spotlight-marker {
   .spotlight-interactive {
-    animation: glow 1s ease-in-out infinite alternate;
+    transform-origin: center;
+    transform-box: fill-box;
+    animation: rotate 8s linear infinite;
   }
 
-  @keyframes glow {
+  @keyframes rotate {
     from {
-      filter: drop-shadow(0 0 10px #fff) drop-shadow(0 0 20px #fff)
-        drop-shadow(0 0 30px #ff1177) drop-shadow(0 0 40px #ff1177);
+      transform: rotate(0deg);
     }
     to {
-      filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #fff)
-        drop-shadow(0 0 15px #ff1177) drop-shadow(0 0 20px #ff1177);
+      transform: rotate(360deg);
     }
   }
 }
