Basic spotlight card showing up; still need to style appropriately

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -69,6 +69,7 @@ $narrative-info-height: 205px;
 $narrative-info-desc-height: 153px;
 $timeline-height: 250px;
 $toolbar-width: 110px;
+$spotlight-bottom: 325px;
 
 $panel-width: 1000px;
 $panel-height: 1000px;
