--- a/src/scss/spotlighttoolbar.scss
+++ b/src/scss/spotlighttoolbar.scss
@@ -1,7 +1,7 @@
 .spotlight-wrapper {
   position: fixed;
   box-sizing: border-box;
-  left: 110px;
+  left: $toolbar-width;
   right: 0px;
   height: 150px;
   color: white;
@@ -34,7 +34,6 @@
           font-weight: bold;
           fill: white;
           text-anchor: middle;
-          font-size: 0.65rem;
           z-index: 10000;
         }
         rect {
