Spotlight card working with new styles; might need to touch up again later

--- a/src/scss/infopopup.scss
+++ b/src/scss/infopopup.scss
@@ -35,6 +35,10 @@
     }
   }
 
+  p {
+    word-wrap: break-word;
+  }
+
   &.dark {
     // background: $black-transparent;
     background: rgba(0, 0, 0, 0.8);
