Reformatting time ticks; adding deselect functionality for most toolbar panels (logic and related styles)

--- a/src/scss/toolbar.scss
+++ b/src/scss/toolbar.scss
@@ -576,6 +576,19 @@
   }
 }
 
+.deselect-button {
+  display: inline-block;
+  height: 36px;
+  line-height: 36px;
+  color: $offwhite;
+  font-size: $normal;
+
+  &:hover {
+    color: red;
+    cursor: pointer;
+  }
+}
+
 .path-list {
   margin-bottom: 10px;
 
