--- a/src/scss/toolbar.scss
+++ b/src/scss/toolbar.scss
@@ -289,6 +289,11 @@
     line-height: 1.4em;
   }
 
+  span {
+    line-height: 36px;
+    font-size: $normal;
+  }
+
   .panel-header {
     display: inline-block;
     width: 36px;
